# story-sandbox

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_zh-CN.md  pyproject.toml
docs/: genre-templates.md
src/story_sandbox/: __init__.py  server.py
src/story_sandbox/utils/: __init__.py  obsidian.py  state.py  templates.py
